TS-4131: InactivityCop doesn't close active connections that have timed out

This closes #434

(cherry picked from commit 4e2f0b818e2800964ac69656d8b4d8cbd2728e2c)