iocore/net/UnixNet.cc
@@ -104,7 +104,7 @@ public:
     }
 
     // Cleanup the active and keep-alive queues periodically
-    nh.manage_active_queue();
+    nh.manage_active_queue(true); // close any connections over the active timeout
     nh.manage_keep_alive_queue();
 
     return 0;
@@ -569,7 +569,7 @@ NetHandler::mainNetEvent(int event, Event *e)
 }
 
 bool
-NetHandler::manage_active_queue()
+NetHandler::manage_active_queue(bool ignore_queue_size = false)
 {
   const int total_connections_in = active_queue_size + keep_alive_queue_size;
   Debug("net_queue", "max_connections_per_thread_in: %d max_connections_active_per_thread_in: %d total_connections_in: %d "
@@ -577,7 +577,7 @@ NetHandler::manage_active_queue()
         max_connections_per_thread_in, max_connections_active_per_thread_in, total_connections_in, active_queue_size,
         keep_alive_queue_size);
 
-  if (max_connections_active_per_thread_in > active_queue_size) {
+  if (ignore_queue_size == false && max_connections_active_per_thread_in > active_queue_size) {
     return true;
   }
 
@@ -595,9 +595,13 @@ NetHandler::manage_active_queue()
     if ((vc->next_inactivity_timeout_at <= now) || (vc->next_activity_timeout_at <= now)) {
       _close_vc(vc, now, handle_event, closed, total_idle_time, total_idle_count);
     }
-    if (max_connections_active_per_thread_in > active_queue_size) {
+    if (ignore_queue_size == false && max_connections_active_per_thread_in > active_queue_size) {
       return true;
     }
+  }
+
+  if (max_connections_active_per_thread_in > active_queue_size) {
+    return true;
   }
 
   return false; // failed to make room in the queue, all connections are active
